--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,12 +25,14 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
+    compile 'com.android.support:cardview-v7:26.0.0-alpha1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    compile 'com.bignerdranch.android:expandablerecyclerview:1.0.3'
 
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.0.1'
-
-
     testCompile 'junit:junit:4.12'
 }
